# Nonviolent-Communicator

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: health.py  progress.py  reflections.py  scenes.py  sessions.py
backend/app/core/: config.py  errors.py  observability.py  security.py  supabase_auth.py
backend/app/db/: security.py  session.py  utils.py
backend/app/schemas/: common.py  progress.py  reflections.py  scenes.py  sessions.py
backend/app/services/: nvc_service.py  ofnr_eval.py  ofnr_eval_online.py
backend/tests/: conftest.py  test_api_flow_integration.py  test_auth_deps.py  test_config_security.py  test_db_security.py  test_error_contract.py  test_errors_module.py  test_nvc_service.py  test_observability.py  test_ofnr_eval.py  test_ofnr_eval_online.py  test_supabase_auth.py
docs/: DEVELOPMENT_PLAN.md  DEV_PLAN_v0.4.md  DEV_PLAN_v0.5.md  MVP_PRD_NVC_Practice_Coach.md  MVP_PRD_NVC_Practice_Coach_v0.2.md  MVP_PRD_NVC_Practice_Coach_v0.3.md  ONE_TIME_SETUP_CHECKLIST.md  PRD.md  README.md  SETUP_AND_TESTING.md  STAGE_REVIEW.md  STAGE_REVIEW_2026-02-11.md  STAGE_REVIEW_2026-02-12.md  TECHNICAL_SOLUTION.md  TECHNICAL_SOLUTION_PYTHON_SUPABASE_VERCEL.md
functions/: health-backend.js
scripts/: api_smoke_test.sh  cloudflare_pages_release.sh  pwa_smoke_check.sh  release_preflight.sh  rls_isolation_check.sh  run_ofnr_eval.py  supabase_jwt_api_smoke_test.sh  vercel_release.sh
web/: app.js  diag.html  index.html  manifest.webmanifest  ping.txt  styles.css  (+2 more)
(+11 files in other folders)
