[project]
name = "nvc-practice-coach-backend"
version = "0.1.0"
description = "FastAPI backend for NVC Practice Coach MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.43",
  "asyncpg>=0.30.0",
  "python-dotenv>=1.1.1",
  "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.1",
  "ruff>=0.12.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
